{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 376,
  "lineage": "c9fe0dbf-918f-9622-3a61-a963dde41561",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:295196550967:loadbalancer/app/albjBi4Imx6zy/18def54430553d7c",
            "arn_suffix": "app/albjBi4Imx6zy/18def54430553d7c",
            "dns_name": "albjBi4Imx6zy-148890005.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:295196550967:loadbalancer/app/albjBi4Imx6zy/18def54430553d7c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "albjBi4Imx6zy",
            "security_groups": [
              "sg-00b710dfa5a5bd61c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0522bf410ee81d3c9"
              },
              {
                "subnet_id": "subnet-0de894131baf195dc"
              }
            ],
            "subnets": [
              "subnet-0522bf410ee81d3c9",
              "subnet-0de894131baf195dc"
            ],
            "tags": {
              "Lab-ID": "jBi4Imx6zy",
              "Name": "albjBi4Imx6zy"
            },
            "tags_all": {
              "Lab-ID": "jBi4Imx6zy",
              "Name": "albjBi4Imx6zy"
            },
            "vpc_id": "vpc-0d342a299d04f5dd4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_security_group.web_server",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.lab_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:295196550967:listener/app/albjBi4Imx6zy/18def54430553d7c/68ee9e0764517701",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:295196550967:targetgroup/tgjBi4Imx6zy/1071e309ec648b30",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:295196550967:listener/app/albjBi4Imx6zy/18def54430553d7c/68ee9e0764517701",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:295196550967:loadbalancer/app/albjBi4Imx6zy/18def54430553d7c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web",
            "aws_lb_target_group.tg",
            "aws_security_group.lb",
            "aws_security_group.web_server",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.lab_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:295196550967:targetgroup/tgjBi4Imx6zy/1071e309ec648b30",
            "arn_suffix": "targetgroup/tgjBi4Imx6zy/1071e309ec648b30",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:295196550967:targetgroup/tgjBi4Imx6zy/1071e309ec648b30",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tgjBi4Imx6zy",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "LB": "albjBi4Imx6zy",
              "Lab-ID": "jBi4Imx6zy",
              "Name": "tgjBi4Imx6zy"
            },
            "tags_all": {
              "LB": "albjBi4Imx6zy",
              "Lab-ID": "jBi4Imx6zy",
              "Name": "tgjBi4Imx6zy"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.lab_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:security-group/sg-0e98560c659abee2b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e98560c659abee2b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f23e655284b35167"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB-jBi4Imx6zy20210802125131222800000004",
            "name_prefix": "DB-jBi4Imx6zy",
            "owner_id": "295196550967",
            "revoke_rules_on_delete": false,
            "tags": {
              "Lab-ID": "jBi4Imx6zy",
              "Name": "DB"
            },
            "tags_all": {
              "Lab-ID": "jBi4Imx6zy",
              "Name": "DB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_server",
            "module.vpc.aws_vpc.this",
            "random_string.lab_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:security-group/sg-00b710dfa5a5bd61c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f23e655284b35167"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-00b710dfa5a5bd61c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LB-jBi4Imx6zy20210802125131223300000005",
            "name_prefix": "LB-jBi4Imx6zy",
            "owner_id": "295196550967",
            "revoke_rules_on_delete": false,
            "tags": {
              "Lab-ID": "jBi4Imx6zy",
              "Name": "DB"
            },
            "tags_all": {
              "Lab-ID": "jBi4Imx6zy",
              "Name": "DB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_server",
            "module.vpc.aws_vpc.this",
            "random_string.lab_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:security-group/sg-0f23e655284b35167",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f23e655284b35167",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-jBi4Imx6zy20210802125124337400000003",
            "name_prefix": "web-jBi4Imx6zy",
            "owner_id": "295196550967",
            "revoke_rules_on_delete": false,
            "tags": {
              "Lab-ID": "jBi4Imx6zy",
              "Name": "Web server"
            },
            "tags_all": {
              "Lab-ID": "jBi4Imx6zy",
              "Name": "Web server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.lab_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:internet-gateway/igw-01c74a9c2e1fa8bb2",
            "id": "igw-01c74a9c2e1fa8bb2",
            "owner_id": "295196550967",
            "tags": {
              "Name": "aws-flow-demo-vpc"
            },
            "tags_all": {
              "Name": "aws-flow-demo-vpc"
            },
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c74a9c2e1fa8bb2",
            "id": "r-rtb-0378ac797fb8ad06c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0378ac797fb8ad06c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:route-table/rtb-028412bd97cd27cf3",
            "id": "rtb-028412bd97cd27cf3",
            "owner_id": "295196550967",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-flow-demo-vpc"
            },
            "tags_all": {
              "Name": "aws-flow-demo-vpc"
            },
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:route-table/rtb-0d8ef8c3ddec8cede",
            "id": "rtb-0d8ef8c3ddec8cede",
            "owner_id": "295196550967",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-flow-demo-vpc"
            },
            "tags_all": {
              "Name": "aws-flow-demo-vpc"
            },
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:route-table/rtb-0378ac797fb8ad06c",
            "id": "rtb-0378ac797fb8ad06c",
            "owner_id": "295196550967",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c74a9c2e1fa8bb2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-flow-demo-vpc"
            },
            "tags_all": {
              "Name": "aws-flow-demo-vpc"
            },
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ec2f9e99364ec0d",
            "route_table_id": "rtb-028412bd97cd27cf3",
            "subnet_id": "subnet-0b85a1d31788fa19c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01655b9dacbdc3b3d",
            "route_table_id": "rtb-0d8ef8c3ddec8cede",
            "subnet_id": "subnet-09950037b157f82c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0453ee3768d70c12f",
            "route_table_id": "rtb-0378ac797fb8ad06c",
            "subnet_id": "subnet-0522bf410ee81d3c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0344dbedb8a668e63",
            "route_table_id": "rtb-0378ac797fb8ad06c",
            "subnet_id": "subnet-0de894131baf195dc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:subnet/subnet-0b85a1d31788fa19c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b85a1d31788fa19c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "295196550967",
            "tags": {
              "Name": "aws-flow-demo-vpc",
              "rds.endpoint": "1"
            },
            "tags_all": {
              "Name": "aws-flow-demo-vpc",
              "rds.endpoint": "1"
            },
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:subnet/subnet-09950037b157f82c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09950037b157f82c1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "295196550967",
            "tags": {
              "Name": "aws-flow-demo-vpc",
              "rds.endpoint": "1"
            },
            "tags_all": {
              "Name": "aws-flow-demo-vpc",
              "rds.endpoint": "1"
            },
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:subnet/subnet-0522bf410ee81d3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0522bf410ee81d3c9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "295196550967",
            "tags": {
              "Name": "aws-flow-demo-vpc",
              "web_server": "1"
            },
            "tags_all": {
              "Name": "aws-flow-demo-vpc",
              "web_server": "1"
            },
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:subnet/subnet-0de894131baf195dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0de894131baf195dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "295196550967",
            "tags": {
              "Name": "aws-flow-demo-vpc",
              "web_server": "1"
            },
            "tags_all": {
              "Name": "aws-flow-demo-vpc",
              "web_server": "1"
            },
            "vpc_id": "vpc-0d342a299d04f5dd4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295196550967:vpc/vpc-0d342a299d04f5dd4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0713bd3fe666b5ede",
            "default_route_table_id": "rtb-008faacd7e8a3d4f6",
            "default_security_group_id": "sg-01bd491433c7ae9d3",
            "dhcp_options_id": "dopt-1fe2c179",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d342a299d04f5dd4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-008faacd7e8a3d4f6",
            "owner_id": "295196550967",
            "tags": {
              "Name": "aws-flow-demo-vpc"
            },
            "tags_all": {
              "Name": "aws-flow-demo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}